[Fixed #142853791] Slider animation extent should be visible in slider axis Inset the slider axis and placed a small marker above the line at each end.

--- a/apps/dg/resources/dg.css
+++ b/apps/dg/resources/dg.css
@@ -667,6 +667,12 @@
     color: #555;
 }
 
+.slider-marker {
+    background-color:#888;
+    /*position:absolute;*/
+}
+
+
 [class^="tile-icon-"], [class*=" tile-icon-"] {
     font-family: 'icomoon';
     font-size: 15px;
